Update Marathi bird guide PDF with latest content revisions

--- a/latex/bird_guide_marathi.tex
+++ b/latex/bird_guide_marathi.tex
@@ -1,5 +1,6 @@
 % Document class and core packages
 \documentclass[a4paper,12pt,landscape]{memoir}
+\usepackage{geometry}
 \usepackage{fontspec}
 \usepackage{unicode-math}
 \usepackage{polyglossia}
@@ -9,6 +10,16 @@
 \usepackage{xcolor}
 \usepackage{mdframed}
 \usepackage{graphicx}
+
+\geometry{
+  a4paper,
+  landscape,
+  left=0.5cm,
+  right=0.5cm,
+  top=1cm,
+  bottom=1.25cm,
+  includehead
+}
 
 % Configure index
 \makeindex[name=birdindex,title=सूची,columns=1,options=-s bird_guide_marathi.ist]
@@ -133,7 +144,7 @@
       \IfFileExists{../images/#9}{%
         \includegraphics[width=0.95\textwidth,height=0.8\textheight,keepaspectratio]
         {../images/#9}%
-        \par\vspace{-1em}%
+        \par\vspace{1em}% Changed from -1em to 1em to add more space
         \getcreditname{#9}%
         \hfill{\small\em\latintext Credit: \input{../images/\creditfile}}%
       }{%
@@ -193,17 +204,38 @@
 
 \makepagestyle{birdguide}
 
-\title{पुणे विद्यापीठातील पक्षी}
+\title{सावित्रीबाई फुले पुणे विद्यापीठ परिसरातले पक्षी}
 \author{}
 \date{}
 
 \begin{document}
 \maketitle
 
+% Add license text after title
 \begin{center}
 \vspace{1cm}
-{\large{\latintext \textcopyright} 2024 योगेश वाडदेकर {\latintext (wadadekar@gmail.com)}}\\
-सर्व हक्क राखीव.
+{\large हे काम क्रिएटिव्ह कॉमन्स अट्रिब्यूशन-नॉनकमर्शियल-शेअरअलाइक ४.० आंतरराष्ट्रीय परवान्यांतर्गत (CC BY-NC-SA 4.0) उपलब्ध आहे.}
+
+\vspace{0.5cm}
+{\normalsize आपल्याला खालील गोष्टींची मुभा आहे:
+\begin{itemize}
+\item शेअर करणे -- कोणत्याही माध्यमातून किंवा स्वरूपात सामग्री कॉपी व वितरित करणे
+\item रुपांतर -- सामग्रीचे मिश्रण, रूपांतर व त्यावर आधारित नवीन सामग्री तयार करणे
+\end{itemize}
+
+खालील अटींच्या अधीन:
+\begin{itemize}
+\item श्रेयनिर्देश -- आपण योग्य श्रेय द्यावे, परवान्याची लिंक द्यावी, आणि बदल केले असल्यास ते नमूद करावे.
+\item अव्यावसायिक -- आपण या सामग्रीचा व्यावसायिक वापर करू शकत नाही.
+\item समान शेअरिंग -- आपण सामग्रीत बदल करून नवीन सामग्री तयार केल्यास, ती मूळ सामग्रीच्याच परवान्यांतर्गत वितरित करावी.
+\end{itemize}
+}
+
+\vspace{0.5cm}
+{\small अधिक माहितीसाठी भेट द्या: {\latintext{https://creativecommons.org/licenses/by-nc-sa/4.0/}}}
+
+\vspace{1cm}
+{\large{\latintext \textcopyright} २०२५ योगेश वाडदेकर}
 \end{center}
 
 \tableofcontents
@@ -242,147 +274,633 @@
 
 \birdentry{काळी घार}{\textit{Milvus migrans}}
   {घारीएवढा}
-  {अतिसामान्य रहिवासी}
-  {मोठा शिकारी पक्षी, विशिष्ट काटेरी शेपटी आणि लांब पंख. पंख काळसर-तपकिरी, खालचा भाग फिकट.}
-  {पुणे विद्यापीठ कॅम्पससह संपूर्ण भारतीय उपखंडात आढळतो.}
-  {नेहमी आकाशात उंच गरगरताना दिसतो, शिकार शोधत असतो. लहान सस्तन, पक्षी आणि मृत प्राणी खातो.}
-  {डिसेंबर ते एप्रिल दरम्यान प्रजनन. उंच झाडांवर काड्या आणि वनस्पतींपासून घरटे बांधतो. २-३ पांढरी अंडी घालतो, त्यावर तपकिरी ठिपके असतात. दोन्ही पालक ३० दिवस अंडी उबवतात आणि पिल्लांची काळजी घेतात.}
+  {अतिसामान्य स्थानिक}
+  {मोठा शिकारी पक्षी. काटेरी शेपटी आणि लांब पंख हे वैशिष्ट्य. पंख काळसर तपकिरी, तळाशी किंचित फिकट.}
+  {परिसरातील सर्वत्र}
+  {उंच आकाशात गरगर फिरताना दिसते. लहान सस्तन प्राणी, पक्षी आणि मृत प्राणी खाते.}
+  {डिसेंबर ते एप्रिल दरम्यान प्रजनन. उंच झाडांवर काड्या-कचऱ्यापासून घरटे. २-३ पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक अंडी उबवतात.}
   {black-kite.jpg}
 
+\birdentry{रामकंक}{\textit{Pseudibis papillosa}}
+  {घारीएवढा}
+  {सामान्य स्थानिक}
+  {मोठा काळा पक्षी, मानेवर लाल पट्टा. लांब वाकडी चोच आणि डोक्यावरील उघडा लाल भाग ठळक.}
+  {परिसरातील मोकळ्या जागा, गवताळ प्रदेश आणि पाणवठे}
+  {हळूहळू चालत शिकार करतो. लहान गटात आढळतो. कीटक आणि लहान प्राणी खातो.}
+  {पावसाळ्यात प्रजनन. मोठ्या झाडांवर मंचासारखे घरटे. २-४ फिकट निळसर-पांढरी अंडी.}
+  {red-naped-ibis.jpg}
+
+\birdentry{लगार}{\textit{Falco peregrinus}}
+  {घारीएवढा}
+  {दुर्मिळ हिवाळी पाहुणा}
+  {मोठा, शक्तिशाली ससाणा. वरचा भाग गडद करडा, खालून पट्टेदार. काळा 'मिशांसारखा' पट्टा विशिष्ट.}
+  {कधीकधी उंच इमारती आणि मोकळ्या जागांमध्ये}
+  {वेगवान आणि चपळ शिकारी. हवेत भरारी मारून पक्षी पकडतो.}
+  {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+  {peregrine-falcon.jpg}
+
 \birdentry{शिक्रा}{\textit{Accipiter badius}}
-  {मैना+}
-  {सामान्य रहिवासी}
-  {लहान ससाणा, लाल डोळे आणि पट्टेदार छाती विशिष्ट. वरचा भाग करडा, खालचा भाग पांढरा, त्यावर तांबूस पट्टे.}
-  {पुणे विद्यापीठ कॅम्पससह संपूर्ण भारतीय उपखंडात व्यापक वितरण.}
-  {वृक्षराजी आणि बागा पसंत करतो. लहान पक्षी, सस्तन आणि कीटक खातो.}
-  {मार्च ते जुलै दरम्यान प्रजनन. झाडांवर फांद्या आणि पाने वापरून घरटे बांधतो. ३-४ फिकट निळसर-पांढरी अंडी. मादी बहुतांश अंडी उबवते (२८-३० दिवस), नर अन्न पुरवतो.}
+  {मैनेपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {छोटा ससाणा, लाल डोळे आणि पट्टेदार छाती विशिष्ट. वरून करडा, खालून पांढरा, तांबूस पट्ट्यांसह.}
+  {परिसरातील वृक्षराजी आणि बागा}
+  {लहान पक्षी, सस्तन प्राणी आणि कीटक खातो. खूप चपळ शिकारी.}
+  {मार्च ते जुलै प्रजनन काळ. झाडांवर काड्या-पानांचे घरटे. ३-४ निळसर पांढरी अंडी.}
   {shikra.jpg}
 
 \birdentry{पाणकोंबडी}{\textit{Amaurornis phoenicurus}}
-  {बुलबुल+}
-  {सामान्य रहिवासी}
-  {मध्यम आकाराचा पक्षी, पांढरा चेहरा, गळा आणि छाती, गडद तपकिरी शरीर. चोचीच्या मुळाशी लाल पट्टा विशिष्ट.}
-  {पुणे विद्यापीठ कॅम्पससह संपूर्ण भारतीय उपखंडात आढळतो.}
-  {दलदलीचे भाग आणि पाणथळ जागा पसंत करतो. कीटक, लहान मासे आणि वनस्पती खातो.}
-  {पाण्याजवळील दाट वनस्पतीत घरटे बनवतो. ४-६ क्रीमी पांढरी अंडी घालतो, त्यावर तांबूस-तपकिरी ठिपके असतात. दोन्ही पालक १९-२० दिवस अंडी उबवतात आणि पिल्लांची काळजी घेतात.}
+  {बुलबुलापेक्षा मोठी}
+  {सामान्य स्थानिक}
+  {मध्यम आकाराचा पक्षी. पांढरा चेहरा, गळा, छाती; गडद तपकिरी शरीर. चोचीजवळ लाल पट्टा.}
+  {परिसरातील पाणवठे आणि दलदलीचे भाग}
+  {पाण्याजवळ राहते. कीटक, छोटे मासे आणि वनस्पती खाते.}
+  {दाट वनस्पतीत घरटे. ४-६ क्रीमी पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक काळजी घेतात.}
   {white-breasted-waterhen.jpg}
 
 \birdentry{राणी बगळा}{\textit{Ardeola grayii}}
-  {मैना+}
-  {अतिसामान्य रहिवासी}
-  {मध्यम आकाराचा बगळा, तपकिरी शरीर आणि पांढरे पंख. पिवळी चोच आणि पाय विशिष्ट.}
-  {पुणे विद्यापीठ कॅम्पससह संपूर्ण भारतीय उपखंडात आढळतो.}
-  {पाणथळ भाग, तळी आणि दलदल पसंत करतो. मासे, बेडूक आणि कीटक खातो.}
-  {जून ते सप्टेंबर दरम्यान प्रजनन. पाण्याजवळील झाडे किंवा झुडपांमध्ये काड्या आणि वनस्पतींपासून घरटे बांधतो. ३-५ फिकट निळसर-हिरवी अंडी घालतो. दोन्ही पालक १८-२४ दिवस अंडी उबवतात आणि पिल्लांना खाऊ घालतात.}
+  {मैनेपेक्षा मोठा}
+  {अतिसामान्य स्थानिक}
+  {मध्यम आकाराचा बगळा. तपकिरी शरीर, पांढरे पंख. पिवळी चोच आणि पाय.}
+  {परिसरातील पाणवठे आणि दलदलीचे भाग}
+  {मासे, बेडूक आणि कीटक खातो. पाण्याजवळ बसून शिकार करतो.}
+  {जून ते सप्टेंबर प्रजनन काळ. पाण्याजवळील झाडांवर घरटे. ३-५ फिकट निळी अंडी.}
   {indian-pond-heron.jpg}
 
 \birdentry{रात्रीचा बगळा}{\textit{Nycticorax nycticorax}}
-  {कावळा+}
-  {दुर्मिळ रहिवासी}
-  {मध्यम आकाराचा बगळा, काळी टोपी आणि पाठ, करडे पंख आणि पांढरा खालचा भाग. लाल डोळे आणि जाड चोच विशिष्ट.}
-  {पुणे विद्यापीठ कॅम्पससह संपूर्ण भारतीय उपखंडात आढळतो.}
-  {पाणथळ भाग, तळी आणि दलदल पसंत करतो. मासे, बेडूक आणि कीटक खातो.}
-  {जून ते सप्टेंबर दरम्यान प्रजनन. पाण्याजवळील झाडे किंवा झुडपांमध्ये काड्या आणि वनस्पतींपासून घरटे बांधतो. ३-५ फिकट निळसर-हिरवी अंडी घालतो. दोन्ही पालक २४-२६ दिवस अंडी उबवतात आणि पिल्लांची काळजी घेतात.}
+  {कावळ्यापेक्षा मोठा}
+  {दुर्मिळ स्थानिक}
+  {मध्यम आकाराचा बगळा. काळी टोपी, पाठ; करडे पंख; पांढरा तळभाग. लाल डोळे, जाड चोच.}
+  {परिसरातील पाणवठे आणि दलदलीचे भाग}
+  {रात्री सक्रिय. मासे, बेडूक आणि कीटक खातो.}
+  {जून ते सप्टेंबर प्रजनन काळ. पाण्याजवळील झाडांवर घरटे. ३-५ फिकट निळसर अंडी.}
   {black-crowned-night-heron.jpg}
 
 \birdentry{गवती बगळा}{\textit{Bubulcus ibis}}
-  {मैना++}
-  {अतिसामान्य रहिवासी}
-  {मध्यम आकाराचा बगळा, पांढरा रंग आणि पिवळी चोच. प्रजननकाळात डोक्यावर, छातीवर आणि पाठीवर केशरी-पिवळे पिसारे येतात.}
-  {पुणे विद्यापीठ कॅम्पससह संपूर्ण भारतीय उपखंडात आढळतो.}
-  {नेहमी गुरांच्या जवळपास दिसतो, चरणाऱ्या जनावरांमुळे उडणारे कीटक आणि लहान प्राणी खातो.}
-  {जून ते सप्टेंबर दरम्यान पावसाळ्यात प्रजनन. वसाहतींमध्ये काड्या आणि वनस्पतींपासून घरटे बांधतो. ३-४ फिकट निळी अंडी घालतो. दोन्ही पालक २३-२६ दिवस अंडी उबवतात आणि पिल्लांना खाऊ घालतात.}
+  {मैनेपेक्षा मोठा}
+  {अतिसामान्य स्थानिक}
+  {मध्यम आकाराचा पांढरा बगळा. प्रजनन काळात डोके, छाती, पाठीवर केशरी पिसारे.}
+  {परिसरातील गवताळ भाग आणि मोकळ्या जागा}
+  {गुरांच्या जवळपास राहतो. कीटक आणि लहान प्राणी खातो.}
+  {जून ते सप्टेंबर प्रजनन काळ. वसाहतीत राहतो. ३-४ फिकट निळी अंडी.}
   {cattle-egret.jpg}
 
 \birdentry{लहान बगळा}{\textit{Egretta garzetta}}
-  {मैना++}
-  {सामान्य रहिवासी}
-  {मध्यम आकाराचा बगळा, पांढरा रंग, काळी चोच आणि काळे पाय, पिवळे पंजे. प्रजननकाळात डोक्यावर, छातीवर आणि पाठीवर नाजूक पिसारे येतात.}
-  {पुणे विद्यापीठ कॅम्पससह संपूर्ण भारतीय उपखंडात आढळतो.}
-  {पाणथळ भाग, तळी आणि दलदल पसंत करतो. मासे, बेडूक आणि कीटक खातो.}
-  {जून ते सप्टेंबर दरम्यान प्रजनन. वसाहतींमध्ये काड्या आणि वनस्पतींपासून घरटे बांधतो. ३-५ फिकट निळसर-हिरवी अंडी घालतो. दोन्ही पालक २१-२५ दिवस अंडी उबवतात आणि पिल्लांची काळजी घेतात.}
+  {मैनेपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {मध्यम आकाराचा शुभ्र पांढरा बगळा. काळी चोच, काळे पाय, पिवळे पंजे.}
+  {परिसरातील पाणवठे आणि दलदलीचे भाग}
+  {मासे, बेडूक आणि कीटक खातो. पाण्यात उभा राहून शिकार करतो.}
+  {जून ते सप्टेंबर प्रजनन काळ. वसाहतीत राहतो. ३-५ फिकट निळसर अंडी.}
   {little-egret.jpg}
 
 \birdentry{पारवा}{\textit{Columba livia}}
-  {मैना+}
-  {अतिसामान्य रहिवासी}
-  {जाडजूड करडा पक्षी, मानेवर इंद्रधनुष्यी पिसारे. दोन काळे पट्टे पंखांवर आणि शेपटीच्या टोकावर काळा पट्टा हे विशेष लक्षण.}
-  {पुणे विद्यापीठ कॅम्पससह संपूर्ण भारतीय उपखंडात, विशेषतः शहरी भागात विपुल.}
-  {शहरी जीवनाशी अनुकूलित. कळपांमध्ये जमिनीवर धान्य आणि बिया खाताना दिसतो.}
-  {वर्षभर प्रजनन करतो. इमारतींच्या कपाऱ्यात, खिडक्यांच्या कठड्यांवर आणि इतर कृत्रिम जागी काड्या आणि छोट्या फांद्यांपासून घरटे बांधतो. २ पांढरी अंडी घालतो. दोन्ही पालक १७-१९ दिवस अंडी उबवतात आणि पिल्लांना खाऊ घालतात.}
+  {मैनेपेक्षा मोठा}
+  {अतिसामान्य स्थानिक}
+  {जाडजूड करडा पक्षी. मानेवर इंद्रधनुषी पिसारे. पंखांवर दोन काळे पट्टे, शेपटीवर काळा पट्टा.}
+  {परिसरातील इमारती आणि मोकळ्या जागा}
+  {कळपाने राहतो. जमिनीवरून धान्य वेचतो. शहरी जीवनाशी जुळवून घेतो.}
+  {वर्षभर प्रजनन. इमारतींवर काड्यांचे घरटे. २ पांढरी अंडी. दोन्ही पालक काळजी घेतात.}
   {blue-rock-pigeon.jpg}
 
 \birdentry{ठिपक्यांचा पारवा}{\textit{Streptopelia chinensis}}
-  {मैना}
-  {सामान्य रहिवासी}
-  {बारीक, लांब शेपटीचा पारवा, गुलाबी-करडा रंग, मानेवर विशिष्ट काळे-पांढरे ठिपके.}
-  {कॅम्पस आणि आजूबाजूच्या भागात सर्वत्र आढळतो.}
-  {नेहमी जोडीने किंवा छोट्या कळपात जमिनीवर धान्य आणि बिया खाताना दिसतो.}
-  {झाडे आणि झुडपांमध्ये सैल घरटे बांधतो. २ पांढरी अंडी घालतो. दोन्ही पालक १४-१६ दिवस अंडी उबवतात आणि पिल्लांची काळजी घेतात.}
+  {मैनेएवढा}
+  {सामान्य स्थानिक}
+  {बारीक, लांब शेपटीचा पारवा. गुलाबी-करडा रंग. मानेवर विशिष्ट काळे-पांढरे ठिपके.}
+  {परिसरातील वृक्षराजी आणि बागांमध्ये}
+  {नेहमी जोडीने किंवा छोट्या कळपात. जमिनीवर धान्य आणि बिया खातो.}
+  {झाडे आणि झुडपांमध्ये सैल घरटे बांधतो. २ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस अंडी उबवतात.}
   {spotted-dove.jpg}
 
 \birdentry{छोटा पारवा}{\textit{Streptopelia senegalensis}}
-  {मैना-}
-  {सामान्य रहिवासी}
-  {लहान आणि नाजूक पारवा, फिकट तपकिरी रंग, मानेवर जांभळी छटा. मानेच्या बाजूंवर काळे-लाल चौकटी नमुना.}
-  {कॅम्पसमध्ये सर्वत्र, विशेषतः मोकळ्या भागात आढळतो.}
-  {नेहमी जोडीने जमिनीवर बिया खाताना दिसतो. गोड संगीतमय आवाज करतो.}
-  {झुडपे आणि लहान झाडांवर साधे काड्यांचे घरटे बांधतो. २ पांढरी अंडी घालतो. दोन्ही पालक १३-१५ दिवस अंडी उबवतात आणि पिल्लांना खाऊ घालतात.}
+  {मैनेपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {लहान आणि नाजूक पारवा. फिकट तपकिरी रंग, मानेवर जांभळी छटा. मानेच्या बाजूंवर काळे-लाल चौकटी नमुना.}
+  {परिसरातील सर्वत्र, विशेषतः मोकळ्या भागात}
+  {नेहमी जोडीने दिसतो. जमिनीवर बिया वेचतो. गोड संगीतमय आवाज करतो.}
+  {झुडपे आणि लहान झाडांवर साधे घरटे. २ पांढरी अंडी. दोन्ही पालक १३-१५ दिवस अंडी उबवतात.}
   {little-brown-dove.jpg}
 
 \birdentry{लाल टिकली टिटवी}{\textit{Vanellus indicus}}
-  {मैना++}
-  {सामान्य रहिवासी}
-  {मोठी टिटवी, डोळ्यांसमोर लाल मांसल वाढ विशिष्ट. तपकिरी पंख, काळे डोके आणि छाती, पांढरा चेहरा आणि खालचा भाग.}
-  {कॅम्पसमधील मोकळ्या भागात, विशेषतः पाणवठ्यांजवळ आढळते.}
-  {त्यांच्या "डिड-ही-डू-इट" या धोक्याच्या आवाजासाठी प्रसिद्ध. दिवसा आणि रात्री सक्रिय, कीटक आणि लहान प्राणी खाते.}
-  {जमिनीवर उथळ खड्ड्यात, बहुधा खडकाळ किंवा दगडगोट्यांच्या भागात घरटे बांधते. ३-४ जैतूनी-तपकिरी अंडी घालते, त्यावर काळे ठिपके असतात. दोन्ही पालक २८-३० दिवस अंडी उबवतात आणि पिल्लांची काळजी घेतात.}
+  {मैनेपेक्षा बरीच मोठी}
+  {सामान्य स्थानिक}
+  {मोठी टिटवी. डोळ्यांसमोर लाल मांसल वाढ विशिष्ट. तपकिरी पंख, काळे डोके व छाती, पांढरा चेहरा व तळभाग.}
+  {परिसरातील मोकळ्या भागात, विशेषतः पाणवठ्यांजवळ}
+  {"डिड-ही-डू-इट" या धोक्याच्या आवाजासाठी प्रसिद्ध. दिवसा-रात्री सक्रिय. कीटक व लहान प्राणी खाते.}
+  {जमिनीवर उथळ खड्ड्यात घरटे. खडकाळ भागात. ३-४ जैतूनी-तपकिरी अंडी. दोन्ही पालक २८-३० दिवस उबवतात.}
   {red-wattled-lapwing.jpg}
 
 \birdentry{कोकिळा}{\textit{Eudynamys scolopacea}}
-  {कावळा-}
-  {सामान्य रहिवासी}
-  {नर चमकदार काळा, लाल डोळे; मादी तपकिरी, पांढरे ठिपके, खालून पट्टेदार. लिंगभेद स्पष्ट.}
-  {कॅम्पसमध्ये सर्वत्र, विशेषतः वृक्षराजीत आढळतो.}
-  {विशिष्ट "कू-ऊ" आवाजासाठी प्रसिद्ध. कावळ्यांच्या घरट्यात परजीवी. फळे आणि बेरी खातो.}
-  {कावळे आणि इतर पक्ष्यांच्या घरट्यात परजीवी म्हणून अंडी घालतो.}
+  {कावळ्यापेक्षा लहान}
+  {सामान्य स्थानिक}
+  {नर चमकदार काळा, लाल डोळे. मादी तपकिरी, पांढरे ठिपके, खालून पट्टेदार. लिंगभेद स्पष्ट.}
+  {परिसरातील सर्वत्र, विशेषतः वृक्षराजीत}
+  {विशिष्ट "कू-ऊ" आवाजासाठी प्रसिद्ध. कावळ्यांच्या घरट्यात परजीवी. फळे व बेरी खातो.}
+  {कावळे व इतर पक्ष्यांच्या घरट्यात परजीवी म्हणून अंडी घालतो.}
   {asian-koel.jpg}
 
+\birdentry{करडा कोकीळ}{\textit{Cacomantis passerinus}}
+  {मैनेपेक्षा लहान}
+  {उन्हाळी पाहुणा}
+  {करडा पक्षी, छातीवर गडद करडा रंग, तळाशी फिकट. पिवळा डोळ्याभोवतीचा कडा विशिष्ट.}
+  {परिसरातील वृक्षराजीत}
+  {लपून-छपून राहतो. हळुवार शिट्टीसारखा आवाज करतो. मुख्यतः कीटक खातो.}
+  {फुलपाखरे व शिंपी पक्ष्यांच्या घरट्यात परजीवी म्हणून अंडी घालतो.}
+  {grey-bellied-cuckoo.jpg}
+
+\birdentry{चातक}{\textit{Hierococcyx varius}}
+  {मैनेपेक्षा बराच मोठा}
+  {सामान्य स्थानिक}
+  {शिक्र्यासारखा दिसणारा. खालून पट्टेदार. पिवळा डोळ्याभोवतीचा कडा. उडताना शिक्र्यासारखा दिसतो.}
+  {परिसरातील वृक्षराजीत सर्वत्र}
+  {विशिष्ट "ब्रेन-फीवर" आवाजासाठी प्रसिद्ध. कीटक व अळ्या खातो.}
+  {सातभाई व इतर पक्ष्यांच्या घरट्यात परजीवी. मार्च ते जुलै दरम्यान सक्रिय.}
+  {common-hawk-cuckoo.jpg}
+
 \birdentry{भारद्वाज}{\textit{Centropus sinensis}}
-  {कावळा}
-  {सामान्य रहिवासी}
-  {मोठा काळा पक्षी, केशरी पंख आणि लांब शेपटी. लाल डोळे आणि वाकडी काळी चोच विशिष्ट.}
-  {कॅम्पसमधील दाट वनस्पतीत आढळतो.}
-  {लपून-छपून वावरतो, जमिनीवर चालताना दिसतो. खोल गुरगुरण्याचा आवाज. कीटक, लहान प्राणी खातो.}
-  {दाट वनस्पतीत जमिनीजवळ छतासारखे घरटे बांधतो. ३-५ पांढरी अंडी घालतो. दोन्ही पालक १५-१६ दिवस अंडी उबवतात आणि पिल्लांची काळजी घेतात.}
+  {कावळ्याएवढा}
+  {सामान्य स्थानिक}
+  {मोठा काळा पक्षी. केशरी पंख व लांब शेपटी. लाल डोळे व वाकडी काळी चोच विशिष्ट.}
+  {परिसरातील दाट वनस्पतीत}
+  {लपून-छपून वावरतो. जमिनीवर चालताना दिसतो. खोल गुरगुरण्याचा आवाज. कीटक व लहान प्राणी खातो.}
+  {दाट वनस्पतीत जमिनीजवळ छतासारखे घरटे. ३-५ पांढरी अंडी. दोन्ही पालक १५-१६ दिवस उबवतात.}
   {greater-coucal.jpg}
 
 \birdentry{राजपोपट}{\textit{Psittacula krameri}}
-  {मैना++}
-  {अतिसामान्य रहिवासी}
-  {हिरवा पोपट, लांब शेपटी. नराच्या मानेभोवती गुलाबी आणि काळा पट्टा, मादीला हा पट्टा नसतो.}
-  {कॅम्पसमध्ये सर्वत्र, विशेषतः वृक्षराजीत विपुल.}
-  {आवाजी, कळपवासी पक्षी. मोठ्या कळपात दिसतो. फळे, बिया आणि धान्य खातो.}
-  {डिसेंबर ते मे दरम्यान प्रजनन. झाडांच्या पोकळीत घरटे करतो, इतर पक्ष्यांशी स्पर्धा करतो. ३-४ पांढरी अंडी घालतो. दोन्ही पालक २२-२४ दिवस अंडी उबवतात आणि पिल्लांना खाऊ घालतात.}
+  {मैनेपेक्षा बराच मोठा}
+  {अतिसामान्य स्थानिक}
+  {हिरवा पोपट, लांब शेपटी. नराच्या मानेभोवती गुलाबी व काळा पट्टा, मादीला नसतो.}
+  {परिसरातील सर्वत्र, विशेषतः वृक्षराजीत}
+  {आवाजी, कळपवासी. मोठ्या कळपात दिसतो. फळे, बिया व धान्य खातो.}
+  {डिसेंबर ते मे प्रजनन. झाडांच्या पोकळीत घरटे. ३-४ पांढरी अंडी. दोन्ही पालक २२-२४ दिवस उबवतात.}
   {rose-ringed-parakeet.jpg}
 
 \birdentry{पेडगी पोपट}{\textit{Psittacula eupatria}}
-  {कावळा}
-  {दुर्मिळ रहिवासी}
-  {राजपोपटापेक्षा मोठा, जाड लाल चोच. नराला गुलाबी आणि काळा गळपट्टा.}
-  {कॅम्पसच्या वृक्षराजीत आढळतो, इतर पोपटांपेक्षा कमी.}
-  {राजपोपटासारखीच सवये पण जास्त सावध. फळे आणि बिया खातो.}
-  {मोठ्या जुन्या झाडांच्या पोकळीत घरटे करतो. २-४ पांढरी अंडी घालतो. दोन्ही पालक २३-२६ दिवस अंडी उबवतात आणि पिल्लांची काळजी घेतात.}
+  {कावळ्याएवढा}
+  {दुर्मिळ स्थानिक}
+  {राजपोपटापेक्षा मोठा. जाड लाल चोच. नराला गुलाबी व काळा गळपट्टा.}
+  {परिसरातील वृक्षराजीत, इतर पोपटांपेक्षा कमी}
+  {राजपोपटासारखीच सवय पण जास्त सावध. फळे व बिया खातो.}
+  {मोठ्या जुन्या झाडांच्या पोकळीत घरटे. २-४ पांढरी अंडी. दोन्ही पालक २३-२६ दिवस उबवतात.}
   {alexandrine-parakeet.jpg}
 
 \birdentry{जांभळा डोका पोपट}{\textit{Psittacula cyanocephala}}
-  {मैना}
-  {सामान्य रहिवासी}
-  {नराचे डोके जांभळे-लाल, मादीचे निळसर-करडे. दोघांचेही शरीर हिरवे आणि पिवळट शेपटीचे टोक.}
-  {कॅम्पसच्या वृक्षराजीत नियमित भेटतो.}
-  {नेहमी जोडीने किंवा लहान कळपात. इतर पोपटांपेक्षा जास्त झाडावर राहतो. मुख्यतः फळे आणि बिया खातो.}
-  {झाडांच्या पोकळीत घरटे करतो, प्रजनन काळ स्थानपरत्वे बदलतो. ३-४ पांढरी अंडी घालतो. दोन्ही पालक २२-२४ दिवस अंडी उबवतात आणि पिल्लांना खाऊ घालतात.}
+  {मैनेएवढा}
+  {सामान्य स्थानिक}
+  {नराचे डोके जांभळे-लाल, मादीचे निळसर-करडे. दोघांचेही शरीर हिरवे व पिवळट शेपटीचे टोक.}
+  {परिसरातील वृक्षराजीत नियमित}
+  {नेहमी जोडीने किंवा लहान कळपात. इतर पोपटांपेक्षा जास्त झाडावर राहतो. फळे व बिया खातो.}
+  {झाडांच्या पोकळीत घरटे. काळ स्थानपरत्वे बदलतो. ३-४ पांढरी अंडी. दोन्ही पालक २२-२४ दिवस उबवतात.}
   {plum-headed-parakeet.jpg}
+
+\birdentry{घरचा घारांडी}{\textit{Apus affinis}}
+  {मैनेपेक्षा लहान}
+  {अतिसामान्य स्थानिक}
+  {लहान घारांडी, पांढरी कंबर व काटेरी शेपटी. गडद तपकिरी-काळा रंग.}
+  {परिसरातील इमारतींच्या परिसरात}
+  {हवेत तरंगत राहणारा. मोठ्या कळपात इमारतींभोवती घिरट्या घालताना दिसतो.}
+  {वसाहतीत राहणारा. इमारतींच्या छपराखाली मातीचे घरटे. २-३ पांढरी अंडी. दोन्ही पालक १९-२१ दिवस उबवतात.}
+  {house-swift.jpg}
+
+\birdentry{ताडमाळ घारांडी}{\textit{Cypsiurus balasiensis}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {घरच्या घारांडीपेक्षा लहान, बारीक शरीर व खोलगट काटेरी शेपटी. एकूण धुरकट तपकिरी.}
+  {परिसरातील ताडाच्या झाडांभोवती}
+  {अतिशय वेगवान उड्डाणक्षम, क्वचितच बसतो. ताडाभोवती दिसतो. हवेतील कीटक खातो.}
+  {वर्षभर प्रजनन. ताडाच्या पानाखाली लाळेने घरटे चिकटवतो. २-३ पांढरी अंडी घालतो.}
+  {asian-palm-swift.jpg}
+
+\birdentry{खंड्या}{\textit{Halcyon smyrnensis}}
+  {मैनेपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {मोठा खंड्या, चमकदार निळी पाठ, चॉकलेटी डोके व पांढरी छाती. मोठी लाल चोच ठळक.}
+  {परिसरातील पाणवठे व बागा}
+  {ठळकपणे बसून राहतो, शिकारीसाठी झडप घालतो. मासे, बेडूक, सरडे व मोठे कीटक खातो.}
+  {मार्च ते जून प्रजनन. जमिनीच्या कडेत भुयार खणून घरटे. ४-७ पांढरी अंडी. दोन्ही पालक २०-२२ दिवस उबवतात.}
+  {white-breasted-kingfisher.jpg}
+
+\birdentry{नीळकंठ}{\textit{Alcedo atthis}}
+  {बुलबुलापेक्षा लहान}
+  {सामान्य स्थानिक}
+  {लहान खंड्या, चमकदार निळी वरची बाजू व केशरी खालची बाजू. लांब चोच व छोटी शेपटी.}
+  {परिसरातील पाणवठे व तलावांजवळ}
+  {पाण्यावर खाली बसून मासे पकडतो. शिकारीपूर्वी मान हलवतो.}
+  {फेब्रुवारी ते एप्रिल प्रजनन. जमिनीच्या कडेत भुयार खणून घरटे. ५-७ पांढरी अंडी घालतो.}
+  {common-kingfisher.jpg}
+
+\birdentry{हरवा पोपई}{\textit{Merops orientalis}}
+  {चिमणीपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {बारीक हिरवा पक्षी, निळा गळा, काळी डोळ्यांची पट्टी. लांब मधली शेपटीची पिसे ठळक.}
+  {परिसरातील विरळ झाडांच्या मोकळ्या भागात}
+  {सुंदर उड्डाणपटू, हवेत कीटक पकडतो. तारा व उघड्या फांद्यांवर बसतो.}
+  {मार्च ते जून प्रजनन. जमिनीत भुयार खणून घरटे. ४-७ पांढरी अंडी घालतो.}
+  {asian-green-bee-eater.jpg}
+
+\birdentry{तांबट}{\textit{Megalaima haemacephala}}
+  {बुलबुलापेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {लहान, हिरवा पक्षी, किरमिजी कपाळ व गळा. पिवळा डोळ्याभोवतीचा भाग ठळक.}
+  {परिसरातील वृक्षराजीत सर्वत्र}
+  {धातूसारख्या 'टुक-टुक-टुक' आवाजासाठी प्रसिद्ध. मुख्यतः फळे, विशेषतः उंबर खातो.}
+  {मेलेल्या झाडांच्या खोडात किंवा फांदीत घरटे खणतो. २-४ पांढरी अंडी. दोन्ही पालक १३-१५ दिवस उबवतात.}
+  {coppersmith-barbet.jpg}
+
+\birdentry{खडी घारूळी}{\textit{Hirundo concolor}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {लहान, गडद तपकिरी घारूळी, किंचित काटेरी शेपटी. एकसमान धुरकट रंग.}
+  {परिसरातील इमारती व खडकाळ भागात}
+  {हवेत कीटक पकडणारी. इमारतींजवळ उडताना दिसते.}
+  {इमारतींवर व खडकांवर मातीचे वाटीसारखे घरटे. २-३ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
+  {dusky-crag-martin.jpg}
+
+\birdentry{होलोखेल घारूळी}{\textit{Hirundo rustica}}
+  {चिमणीएवढी}
+  {सामान्य हिवाळी पाहुणा}
+  {लांब, खोल काटेरी शेपटी. वर निळसर-काळी, कपाळ व गळा तांबूस, खालून फिकी.}
+  {हिवाळ्यात परिसरातील मोकळ्या भागात}
+  {सुंदर उड्डाणपटू, हवेत कीटक पकडते. तारांवर बसते.}
+  {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणी.}
+  {barn-swallow.jpg}
+
+\birdentry{तांबट घारूळी}{\textit{Hirundo daurica}}
+  {चिमणीएवढी}
+  {सामान्य स्थानिक}
+  {होलोखेल घारूळीसारखी पण तांबूस कंबर व छोट्या शेपटीची पिसे.}
+  {परिसरातील सर्वत्र, विशेषतः इमारतींजवळ}
+  {हवेत कीटक पकडणारी, इतर घारूळींच्या कळपात मिसळते.}
+  {इमारतींखाली बाटलीसारखे मातीचे घरटे. ३-४ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
+  {red-rumped-swallow.jpg}
+
+\birdentry{तारघारूळी}{\textit{Hirundo smithii}}
+  {चिमणीएवढी}
+  {सामान्य स्थानिक}
+  {ठळक तारेसारखी लांब शेपटीची पिसे. चमकदार निळसर-काळी वर, पांढरी खाली.}
+  {परिसरातील पाणवठे व मोकळ्या जागा}
+  {सुंदर उड्डाणपटू, तारांवर बसते. हवेतील कीटक खाते.}
+  {पुलांखाली व इमारतींवर मातीचे वाटीसारखे घरटे. २-३ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
+  {wire-tailed-swallow.jpg}
+
+\birdentry{लांबपुच्छी खंजीर}{\textit{Lanius schach}}
+  {बुलबुलापेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {करडा-तपकिरी वरचा भाग, खालून पांढरा. डोळ्यातून काळी पट्टी. लांब टोकदार शेपटी.}
+  {परिसरातील विरळ झाडी असलेले मोकळे भाग}
+  {ठळक जागी बसून शिकार करतो. शिकार काट्यांवर टोचून ठेवतो. कीटक, सरडे व लहान पक्षी खातो.}
+  {काटेरी झुडपात नीटनेटके घरटे बांधतो. ३-६ पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक १५-१६ दिवस उबवतात.}
+  {long-tailed-shrike.jpg}
+
+\birdentry{सोनेरी होला}{\textit{Oriolus oriolus}}
+  {मैनेपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {नर सोनेरी पिवळा, काळे पंख व शेपटी. मादी फिकट हिरवी.}
+  {परिसरातील वृक्षराजीत}
+  {लाजाळू स्वभाव, वृक्षमुकुटात राहतो. गोड बासरीसारखा आवाज. फळे व कीटक खातो.}
+  {झाडाच्या फांदीवर झोळीसारखे घरटे. २-४ पांढरी, तांबूस ठिपक्यांची अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
+  {golden-oriole.jpg}
+
+\birdentry{कृष्ण भारद्वाज}{\textit{Dicrurus macrocercus}}
+  {मैनेपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {चमकदार काळा पक्षी, काटेरी शेपटी. जाड वाकडी चोच.}
+  {परिसरातील मोकळ्या झाडांच्या भागात}
+  {धाडसी व आक्रमक. इतर पक्ष्यांचा पाठलाग करतो. हवेत कीटक पकडण्यात तरबेज.}
+  {मार्च ते जुलै प्रजनन. बाह्य फांदीवर वाटीसारखे घरटे. ३-५ गुलाबी-पांढरी, तांबूस ठिपक्यांची अंडी.}
+  {black-drongo.jpg}
+
+\birdentry{राखी भारद्वाज}{\textit{Dicrurus leucophaeus}}
+  {मैनेपेक्षा मोठा}
+  {हिवाळी पाहुणा}
+  {कृष्ण भारद्वाजासारखा पण एकूण करडा रंग. कमी काटेरी शेपटी.}
+  {परिसरातील वृक्षराजीत हिवाळ्यात}
+  {कृष्ण भारद्वाजापेक्षा कमी आक्रमक. हवेत व पानांमधून कीटक पकडतो.}
+  {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+  {ashy-drongo.jpg}
+
+\birdentry{सामान्य मैना}{\textit{Acridotheres tristis}}
+  {मैना}
+  {अतिसामान्य स्थानिक}
+  {तपकिरी शरीर, काळे डोके, पिवळी चोच व पाय. उडताना पंखांवर पांढरे पट्टे दिसतात.}
+  {परिसरातील सर्वत्र विपुल}
+  {धीट, जुळवून घेणारा पक्षी. जोडीने किंवा कळपात दिसतो. सर्व प्रकारचे अन्न खातो.}
+  {झाडांच्या व इमारतींच्या पोकळीत घरटे. ४-६ निळसर-हिरवी अंडी. दोन्ही पालक १३-१५ दिवस उबवतात.}
+  {common-myna.jpg}
+
+\birdentry{वनमैना}{\textit{Acridotheres fuscus}}
+  {मैना}
+  {सामान्य स्थानिक}
+  {सामान्य मैनेसारखी पण अधिक करडी. चोचीजवळ पिसांची झुपके. नारिंगी-पिवळी चोच व पाय.}
+  {परिसरातील वृक्षराजी व बागा, शहरी भागात कमी}
+  {नेहमी जोडीने किंवा छोट्या कळपात. सामान्य मैनेपेक्षा जास्त झाडावर राहते. कीटक व फळे खाते.}
+  {मार्च ते जुलै प्रजनन. झाडांच्या पोकळीत घरटे. ४-५ फिकट निळी अंडी.}
+  {jungle-myna.jpg}
+
+\birdentry{ब्राह्मणी मैना}{\textit{Sturnia pagodarum}}
+  {मैना}
+  {सामान्य स्थानिक}
+  {विशिष्ट बदामी रंगाची मैना, काळी टोपी, करडे पंख व पांढरा तळभाग.}
+  {परिसरातील वृक्षराजी व बागांमध्ये}
+  {जोडीने किंवा छोट्या कळपात दिसते. फळे, बेरी व कीटक खाते.}
+  {एप्रिल ते जुलै प्रजनन. झाडांच्या व इमारतींच्या पोकळीत घरटे. ३-५ फिकट निळी अंडी.}
+  {brahminy-starling.jpg}
+
+\birdentry{दयाळ}{\textit{Copsychus saularis}}
+  {बुलबुल}
+  {सामान्य स्थानिक}
+  {नर काळा-पांढरा ठळक रंगसंगती, मादी अधिक करडी. लांब शेपटी वर धरतो.}
+  {परिसरातील वृक्षराजी व बागांमध्ये सर्वत्र}
+  {धीट व गोड आवाजी गायक. कीटक व बेरी खातो.}
+  {मार्च ते जुलै प्रजनन. झाडांच्या व इमारतींच्या पोकळीत घरटे. ४-५ हिरवट-पांढरी, तपकिरी ठिपक्यांची अंडी.}
+  {oriental-magpie-robin.jpg}
+
+\birdentry{ठिपक्यांची फुलपाखरू}{\textit{Rhipidura albogularis}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {लहान काळा-पांढरा पक्षी, ठिपकेदार छाती, पांढरी भुवई व पंख्यासारखी शेपटी पसरून ठेवतो.}
+  {परिसरातील दाट झाडी असलेले भाग}
+  {चपळ व कसरती, कीटक पकडताना शेपटी पसरतो. हवेत छोटी उड्डाणे करून कीटक पकडतो.}
+  {मुख्यतः मार्च ते सप्टेंबर प्रजनन. झाडाच्या फांदीवर नीटनेटके वाटीसारखे घरटे. २-३ क्रीम रंगाची, तांबूस ठिपक्यांची अंडी.}
+  {spot-breasted-fantail.jpg}
+
+\birdentry{काळ्या डोक्याचा चिंचगव्हाळ}{\textit{Saxicola caprata}}
+  {बुलबुलापेक्षा लहान}
+  {सामान्य स्थानिक}
+  {नर काळा, पांढरी कंबर व पंखांवर पट्टे; मादी तपकिरी, खालून फिकी.}
+  {परिसरातील विरळ झुडपे असलेले मोकळे भाग}
+  {झुडपे व कुंपणांवर ठळकपणे बसतो. छोटी उड्डाणे करून कीटक पकडतो.}
+  {मार्च ते ऑगस्ट प्रजनन. गवतात व झुडपात वाटीसारखे घरटे. ३-४ फिकट निळसर-हिरवी, तांबूस ठिपक्यांची अंडी.}
+  {pied-bushchat.jpg}
+
+\birdentry{लाल-शेपटी बुलबुल}{\textit{Pycnonotus cafer}}
+  {बुलबुल}
+  {अतिसामान्य स्थानिक}
+  {गडद तपकिरी-काळा पक्षी, खवल्यांसारखी रचना, लाल मूळशेपटी व काळी शिखा विशिष्ट.}
+  {परिसरातील सर्वत्र}
+  {सक्रिय व आवाजी. जोडीने किंवा लहान कळपात. फळे व कीटक खातो.}
+  {वर्षभर प्रजनन, फेब्रुवारी ते मे शिखर. झुडपात वाटीसारखे घरटे. २-३ गुलाबी-पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक १४ दिवस उबवतात.}
+  {red-vented-bulbul.jpg}
+
+\birdentry{लाल-कानांचा बुलबुल}{\textit{Pycnonotus jocosus}}
+  {बुलबुल}
+  {सामान्य स्थानिक}
+  {तपकिरी वरचा भाग, पांढरा खालचा भाग. लाल कानपट्टी व टोकदार काळी शिखा विशिष्ट.}
+  {परिसरातील वृक्षराजी व बागांमध्ये}
+  {जीवंत पक्षी, गोड आवाजी. नेहमी जोडीने. फळे व कीटक खातो.}
+  {झुडपात व लहान झाडांवर नीटनेटके वाटीसारखे घरटे. २-३ गुलाबी-पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक १२-१४ दिवस उबवतात.}
+  {red-whiskered-bulbul.jpg}
+
+\birdentry{मोठा खडकचिमटा}{\textit{Turdoides malcolmi}}
+  {मैनेपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {करडा-तपकिरी पक्षी, फिकट रेघा. लांब टप्प्याटप्प्यांची शेपटी व वाकडी चोच.}
+  {परिसरातील मोकळी झुडपे व बागा}
+  {गटाने राहतो, आवाजी. जमिनीवर पाने उलटून कीटक व बेरी खातो.}
+  {मार्च ते सप्टेंबर प्रजनन. काटेरी झुडपात अस्ताव्यस्त घरटे. ३-४ निळसर अंडी. गटातील सदस्य मदत करतात.}
+  {large-grey-babbler.jpg}
+
+\birdentry{टिकेल निळा फुलपाखरू}{\textit{Muscicapa tickelliae}}
+  {बुलबुलापेक्षा लहान}
+  {सामान्य स्थानिक}
+  {नर चमकदार निळा वरून, तांबूस खालून. मादी फिकट.}
+  {परिसरातील दाट झाडीच्या भागात}
+  {सक्रिय पक्षी, बसल्या जागेवरून छोटी उड्डाणे करून कीटक पकडतो. गोड शिट्टीसारखा आवाज.}
+  {एप्रिल ते जुलै प्रजनन. झाडाच्या पोकळीत किंवा फटीत नीटनेटके वाटीसारखे घरटे. ३-४ फिकट अंडी, तपकिरी ठिपके.}
+  {tickells-blue-flycatcher.jpg}
+
+\birdentry{राखी वटवट्या}{\textit{Prinia socialis}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {राखाडी वरचा भाग, पांढरा खालचा भाग. लांब टप्प्याटप्प्यांची शेपटी वर करून धरतो.}
+  {परिसरातील बागा व झुडपांच्या भागात}
+  {सक्रिय पक्षी, वनस्पतीतून कर्कश आवाज करत फिरतो.}
+  {मुख्यतः जून ते सप्टेंबर प्रजनन. गवतात व झुडपात खोल वाटीसारखे घरटे. ३-५ विटकरी अंडी.}
+  {ashy-prinia.jpg}
+
+\birdentry{जंगली वटवट्या}{\textit{Prinia sylvatica}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {करडा-तपकिरी वरचा भाग, फिकट खालचा भाग. राखी वटवट्यापेक्षा गडद.}
+  {परिसरातील गवताळ व झुडपाळ भाग}
+  {लपून-छपून राहतो, मोठ्या आवाजाने ओळख करून देतो.}
+  {जून ते सप्टेंबर प्रजनन. गवताच्या झुंबरात चेंडूसारखे घरटे. ३-५ हिरवट-पांढरी अंडी.}
+  {jungle-prinia.jpg}
+
+\birdentry{शिंपी}{\textit{Orthotomus sutorius}}
+  {चिमणीपेक्षा बराच लहान}
+  {सामान्य स्थानिक}
+  {छोटा सुतार पक्षी, लांब उभी शेपटी. जैतुनी-हिरवा वरचा भाग, पांढरा खालचा भाग, तांबूस टाळू.}
+  {परिसरातील बागा व दाट झुडपांच्या भागात}
+  {सक्रिय पक्षी, सतत वनस्पतीतून फिरत राहतो. मोठा 'टू-विट टू-विट' आवाज.}
+  {मुख्यतः मे ते सप्टेंबर प्रजनन. जिवंत पानांना शिवून अद्भुत घरटे बनवतो. ३-५ तांबूस-पांढरी, ठिपक्यांची अंडी.}
+  {common-tailorbird.jpg}
+
+\birdentry{लहान पांढऱ्या गळ्याची सुतार}{\textit{Sylvia curruca}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य हिवाळी पाहुणा}
+  {छोटा सुतार पक्षी, करडा-तपकिरी वरचा भाग, पांढरा गळा व खालचा भाग. डोळ्यातून काळी पट्टी.}
+  {परिसरातील झुडपे व झाडीत}
+  {सक्रिय पण लपून राहणारा. झुडपात कीटक शोधतो. खडखडणारा विशिष्ट आवाज.}
+  {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+  {lesser-whitethroat.jpg}
+
+\birdentry{घरचिमणी}{\textit{Passer domesticus}}
+  {चिमणी}
+  {अतिसामान्य स्थानिक}
+  {नर करडा-तपकिरी, काळा गळपट्टा व तांबूस मान; मादी एकसमान तपकिरी.}
+  {परिसरातील इमारती व मानवी वस्तीजवळ}
+  {कळपवासी, मुख्यतः धान्य व बिया खाते.}
+  {जवळपास वर्षभर प्रजनन. इमारतींच्या पोकळीत घरटे. ४-६ पांढरी, तपकिरी ठिपक्यांची अंडी.}
+  {house-sparrow.jpg}
+
+\birdentry{बया}{\textit{Ploceus philippinus}}
+  {चिमणी}
+  {सामान्य स्थानिक}
+  {प्रजननकाळात नर चमकदार पिवळा, तपकिरी पाठ; मादी चिमणीसारखी.}
+  {परिसरातील गवताळ भाग व बोरूची झाडी}
+  {वसाहतीत राहतो. नर कलात्मक लोंबती घरटी बांधतो. गवताचे बी खातो.}
+  {पावसाळ्यात प्रजनन. नर अनेक टोपीसारखी घरटी बांधतो. २-४ पांढरी अंडी.}
+  {baya-weaver.jpg}
+
+\birdentry{शामा}{\textit{Copsychus fulicatus}}
+  {चिमणी}
+  {सामान्य स्थानिक}
+  {नर चमकदार काळा, पंखांवर पांढरे पट्टे. मादी तपकिरी. शेपटी नेहमी वर धरून असतो.}
+  {परिसरातील मोकळे भाग व झुडपाळ प्रदेश}
+  {जमिनीवर सक्रिय, वारंवार शेपटी वर करतो. गोड आवाज व शिट्ट्या वाजवतो.}
+  {मार्च ते सप्टेंबर प्रजनन. भिंतीच्या भेगा व जमिनीत घरटे. २-४ पांढरी, तपकिरी ठिपक्यांची अंडी.}
+  {indian-robin.jpg}
+
+\birdentry{गांधारी}{\textit{Zosterops palpebrosus}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {छोटा जैतुनी-हिरवा पक्षी, डोळ्याभोवती पांढरा कडा विशिष्ट. पिवळा गळा व शेपटीखालचा भाग.}
+  {परिसरातील वृक्षराजी व बागांमध्ये}
+  {चपळ व कसरती. छोट्या कळपात पानांमध्ये फिरतो. कीटक व मधुरस खातो.}
+  {मार्च ते सप्टेंबर प्रजनन. झाडाच्या फांदीवर नीटनेटके वाटीसारखे घरटे. २-४ फिकट निळी अंडी.}
+  {oriental-white-eye.jpg}
+
+\birdentry{टिपकेरी मुनिया}{\textit{Lonchura punctulata}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {लहान तपकिरी फिंच, छातीवर खवल्यांसारखी रचना. जाड छोटी चोच.}
+  {परिसरातील गवताळ व झुडपाळ भाग}
+  {कळपाने राहते, गवताचे बी खाते. गोड चिवचिव आवाज.}
+  {जुलै ते ऑक्टोबर प्रजनन. काटेरी झुडपात मोठे चेंडूसारखे घरटे. ४-६ पांढरी अंडी.}
+  {scaly-breasted-munia.jpg}
+
+\birdentry{लांबशेपटी काक}{\textit{Dendrocitta vagabunda}}
+  {मैनेपेक्षा बराच मोठा}
+  {सामान्य स्थानिक}
+  {मोठा तांबूस व काळा पक्षी, लांब टप्प्याटप्प्यांची शेपटी. करडी मान व पांढऱ्या टोकांची शेपटी विशिष्ट.}
+  {परिसरातील वृक्षराजीत}
+  {धीट व कुतूहली. लहान गटात दिसतो. फळे, कीटक व लहान प्राणी खातो.}
+  {मार्च ते जुलै प्रजनन. झाडाच्या फांदीवर नीटनेटके वाटीसारखे घरटे. ३-५ हिरवट-पांढरी, तपकिरी ठिपक्यांची अंडी.}
+  {rufous-treepie.jpg}
+
+\birdentry{शहरी कावळा}{\textit{Corvus splendens}}
+  {कावळा}
+  {अतिसामान्य स्थानिक}
+  {करडा व काळा कावळा, विशिष्ट करड्या मानेचा पट्टा.}
+  {परिसरातील सर्वत्र, विशेषतः मानवी वस्तीजवळ}
+  {धीट व बुद्धिमान. सर्व प्रकारचे अन्न खातो.}
+  {मार्च ते जुलै प्रजनन. झाडांवर मंचासारखे घरटे. ४-५ फिकट निळसर-हिरवी, तपकिरी ठिपक्यांची अंडी.}
+  {house-crow.jpg}
+
+\birdentry{जंगली कावळा}{\textit{Corvus macrorhynchos}}
+  {कावळ्यापेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {शहरी कावळ्यापेक्षा मोठा, संपूर्ण काळा, जाड चोच. एकांडा स्वभाव.}
+  {परिसरातील वृक्षराजीत व आजूबाजूच्या भागात}
+  {शहरी कावळ्यापेक्षा सावध. एकटा किंवा जोडीने दिसतो. सर्व प्रकारचे अन्न खातो.}
+  {मार्च ते जून प्रजनन. उंच झाडांवर मोठे मंचासारखे घरटे. ३-५ फिकट हिरवी, तपकिरी ठिपक्यांची अंडी.}
+  {large-billed-crow.jpg}
+
+\birdentry{पिंगळा}{\textit{Athene brama}}
+  {मैनेपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {छोटा, जाडजूड घुबड, पांढरे ठिपके. मोठे पिवळे डोळे व पांढऱ्या भुवया त्याला गंभीर चेहरा देतात.}
+  {परिसरातील वृक्षराजी व बागांमध्ये}
+  {पहाटे व संध्याकाळी सक्रिय. जागरूक असताना मान हलवतो. कीटक व लहान प्राणी खातो.}
+  {फेब्रुवारी ते एप्रिल प्रजनन. झाडांच्या पोकळीत व जुन्या इमारतींमध्ये घरटे. ३-५ पांढरी अंडी. नर अन्न आणतो, मादी २८-३० दिवस अंडी उबवते.}
+  {spotted-owlet.jpg}
+
+\birdentry{ठिपक्यांचा घुबड}{\textit{Strix ocellata}}
+  {कावळ्यापेक्षा मोठा}
+  {दुर्मिळ स्थानिक}
+  {मोठा घुबड, विशिष्ट ठिपकेदार तपकिरी पिसारा. गोल डोके, कान-शिखा नाहीत. काळे डोळे, पिवळट-हिरवी चोच.}
+  {परिसरातील दाट वृक्षराजीच्या भागात}
+  {पूर्णपणे रात्रीचर. रात्री खोल आवाज करतो. उंदीर, पक्षी व मोठे कीटक खातो.}
+  {डिसेंबर ते मार्च प्रजनन. झाडांच्या नैसर्गिक पोकळीत घरटे. २-३ पांढरी अंडी. नर अन्न आणतो, मादी अंडी उबवते.}
+  {mottled-wood-owl.jpg}
+
+\birdentry{धनेश}{\textit{Ocyceros birostris}}
+  {कावळा}
+  {सामान्य स्थानिक}
+  {मोठा करडा पक्षी, लांब शेपटी व टोपीसारखी वाढ चोचीवर. मादीची टोपी लहान.}
+  {परिसरातील मोठी जुनी झाडे असलेल्या भागात}
+  {नेहमी जोडीने झाडावरून झाडावर जातो. मुख्यतः फळे, विशेषतः उंबर खातो.}
+  {मार्च ते जून प्रजनन. मादी स्वतःला झाडाच्या पोकळीत कोंडून घेते, एक छोटी फट सोडते. नर तिला व पिलांना खाऊ घालतो. २-४ पांढरी अंडी.}
+  {indian-grey-hornbill.jpg}
+
+\birdentry{नीळकंठ}{\textit{Coracias benghalensis}}
+  {मैनेपेक्षा बराच मोठा}
+  {सामान्य स्थानिक}
+  {कावळ्याएवढा पक्षी, चमकदार निळे पंख व शेपटी. तपकिरी डोके व पाठ.}
+  {परिसरातील विरळ झाडी असलेल्या मोकळ्या भागात}
+  {ठळक जागी बसून राहतो, हवेत नाट्यमय लोंबकळत झेप घेतो. मोठे कीटक व लहान सरडे खातो.}
+  {मार्च ते जुलै प्रजनन. झाडांच्या पोकळीत घरटे. ३-५ पांढरी अंडी. दोन्ही पालक १७-१९ दिवस उबवतात.}
+  {indian-roller.jpg}
+
+\birdentry{काळ्या डोक्याचा निलाई}{\textit{Coracina melanoptera}}
+  {मैनेपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {नर करडा, काळे डोके; मादी करडी, फिकट आडव्या रेघांसह.}
+  {परिसरातील वृक्षराजी व बागांमध्ये}
+  {पद्धतशीरपणे पानांमध्ये कीटक शोधतो. इतर शिकारी पक्ष्यांच्या कळपात मिसळतो.}
+  {एप्रिल ते जुलै प्रजनन. फांदीवर छोटे वाटीसारखे घरटे. २-३ करडी-हिरवट, तपकिरी ठिपक्यांची अंडी.}
+  {black-headed-cuckoo-shrike.jpg}
+
+\birdentry{छोटा मिनिवेट}{\textit{Pericrocotus cinnamomeus}}
+  {चिमणी}
+  {सामान्य स्थानिक}
+  {नर काळा व नारिंगी; मादी करडी व पिवळी. दोघांनाही लांब शेपटी.}
+  {परिसरातील वृक्षराजीत सर्वत्र}
+  {सक्रिय, छोट्या कळपात वृक्षमुकुटात फिरतो. गोड शिट्टीसारखा आवाज.}
+  {मार्च ते जून प्रजनन. फांदीवर छोटे वाटीसारखे घरटे. २-४ फिकट हिरवी, तपकिरी ठिपक्यांची अंडी.}
+  {small-minivet.jpg}
+
+\birdentry{टिकेल फुलपक्षी}{\textit{Dicaeum erythrorhynchos}}
+  {चिमणीपेक्षा बराच लहान}
+  {सामान्य स्थानिक}
+  {अतिलहान पक्षी, करडा-तपकिरी वर, मळकट पांढरा खाली. छोटी शेपटी व वाकडी चोच.}
+  {परिसरातील फुले व फळे असलेल्या झाडांवर}
+  {अत्यंत सक्रिय, फुलांमध्ये झपाझप फिरतो. बेरी व मधुरस खातो.}
+  {वर्षभर प्रजनन, मार्च ते मे शिखर. नाशपातीसारखे लटकते घरटे. २-३ पांढरी अंडी. दोन्ही पालक पिलांची काळजी घेतात.}
+  {tickells-flowerpecker.jpg}
+
+\birdentry{राखी हलवा}{\textit{Motacilla cinerea}}
+  {चिमणी}
+  {सामान्य हिवाळी पाहुणा}
+  {बारीक पक्षी, लांब शेपटी, करडा वरचा भाग व पिवळा खालचा भाग. सतत शेपटी हलवत राहतो.}
+  {परिसरातील पाणवठे व ओलसर भागात}
+  {सक्रिय शिकारी, धावत-चालत शेपटी हलवत राहतो. जमिनीवरून व हवेतून कीटक पकडतो.}
+  {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+  {grey-wagtail.jpg}
+
+\birdentry{पांढरा हलवा}{\textit{Motacilla alba}}
+  {चिमणी}
+  {सामान्य हिवाळी पाहुणा}
+  {काळा-पांढरा पक्षी, करडी पाठ, पांढरा चेहरा व खालचा भाग. सतत शेपटी हलवतो.}
+  {परिसरातील मोकळ्या जागा, गवताळ भाग व पाणवठ्यांजवळ}
+  {सुंदर चालत जमिनीवर फिरतो, शेपटी हलवत राहतो. कीटक व लहान जीव खातो.}
+  {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+  {white-wagtail.jpg}
+
+\birdentry{पांढऱ्या भुवयांचा हलवा}{\textit{Motacilla maderaspatensis}}
+  {चिमणीपेक्षा मोठा}
+  {सामान्य स्थानिक}
+  {मोठा काळा-पांढरा हलवा, ठळक पांढरी भुवई. लांब शेपटी सतत वर-खाली हलवतो.}
+  {परिसरातील पाणवठे व मोकळ्या जागा}
+  {सक्रिय शिकारी, धावत-चालत शेपटी हलवत राहतो. नेहमी जोडीने दिसतो.}
+  {मार्च ते सप्टेंबर प्रजनन. भिंतींच्या व कड्यांच्या भेगांमध्ये वाटीसारखे घरटे. ३-४ करडी-पांढरी, तपकिरी ठिपक्यांची अंडी.}
+  {white-browed-wagtail.jpg}
+
+\birdentry{चांदी}{\textit{Aegithina tiphia}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {प्रजननकाळात नर चमकदार पिवळा व काळा; इतर वेळी व मादी हिरवट-पिवळी. पांढरे पंखपट्टे विशिष्ट.}
+  {परिसरातील दाट वृक्षराजी असलेल्या भागात}
+  {सक्रिय पक्षी, सतत पानांमध्ये फिरत राहतो. गोड संगीतमय आवाज. मुख्यतः कीटक खातो.}
+  {एप्रिल ते सप्टेंबर प्रजनन. फांदीत नीटनेटके वाटीसारखे घरटे. २-३ गुलाबी अंडी, तपकिरी ठिपके.}
+  {common-iora.jpg}
+
+\birdentry{राखी चिमणी}{\textit{Parus cinereus}}
+  {चिमणीपेक्षा लहान}
+  {सामान्य स्थानिक}
+  {छोटा करडा पक्षी, काळी टोपी व गळा, पांढरे गाल व खालचा भाग.}
+  {परिसरातील वृक्षराजी व बागांमध्ये}
+  {सक्रिय व कसरती, कीटक पकडताना उलटा लटकतो. कीटक व बिया खातो.}
+  {मार्च ते जुलै प्रजनन. झाडांच्या पोकळीत घरटे. ४-६ पांढरी, लाल-तपकिरी ठिपक्यांची अंडी.}
+  {asian-tit.jpg}
+
+\birdentry{जांभळा सूर्यपक्षी}{\textit{Cinnyris asiaticus}}
+  {चिमणीपेक्षा बराच लहान}
+  {सामान्य स्थानिक}
+  {प्रजननकाळात नर चमकदार जांभळा-काळा; इतर वेळी व मादी जैतुनी-तपकिरी वर, पिवळी खाली.}
+  {परिसरातील फुलझाडे असलेल्या भागात}
+  {अत्यंत सक्रिय, फुलांसमोर तरंगतो. लांब वाकडी चोच मधुरसासाठी. लहान कीटकही पकडतो.}
+  {मुख्यतः फेब्रुवारी ते मे प्रजनन. झोळीसारखे लटकते घरटे. २-३ हिरवट-पांढरी, तपकिरी ठिपक्यांची अंडी.}
+  {purple-sunbird.jpg}
+
+\birdentry{जांभळी-कंबर सूर्यपक्षी}{\textit{Leptocoma zeylonica}}
+  {चिमणीपेक्षा बराच लहान}
+  {सामान्य स्थानिक}
+  {नराचा वरचा भाग चमकदार जांभळा-निळा, पोट पिवळे. मादी जैतुनी वर, पिवळी खाली.}
+  {परिसरातील बागा व फुलझाडे असलेल्या भागात}
+  {जांभळ्या सूर्यपक्ष्यासारखाच सक्रिय, फुलांसमोर तरंगतो. मधुरस व लहान कीटक खातो.}
+  {वर्षभर प्रजनन. प्रवेशद्वारासह झोळीसारखे घरटे. २ हिरवट-पांढरी, तपकिरी ठिपक्यांची अंडी.}
+  {purple-rumped-sunbird.jpg}
 
 \chapter*{अनुक्रमणिका}
 \addcontentsline{toc}{chapter}{अनुक्रमणिका}
